--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
+@import "@spartan-ng/brain/hlm-tailwind-preset.css";
 @source "./src/app";
-@source "./src/index.html";
+@source "./index.html";
 @source "./packages/angular/src";
 @source "./src/tw-classes.txt";
 
